--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="Nishanew1.png" alt="nisha profile picture"></td>
+      <td><img src="nishanew1.png" alt="nisha profile picture"></td>
       <td>
         <h1><a href="https://www.facebook.com/scorpio.nisha06">Nisha Rehal</a></h1>
         <p><em>An Upcoming <strong>Web Developer</strong></em></p>
