--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <tbody>
       <tr>
         <td>2012-2016</td>
-        <td>Assistant Manager (Banking Operations) at<a href="https://www.icicibank.com" ICICI Bank Ltd</a></td>
+        <td>Assistant Manager (Banking Operations) at<a href="https://www.icicibank.com">ICICI Bank Ltd</a></td>
       </tr>
     </tbody>
   </table>
