--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>2012-2016</td>
-        <td>Assistant Manager (Banking Operations) at<a href="https://www.icicibank.com">ICICI Bank Ltd</a></td>
+        <td>2012-2014</td>
+        <td>Senior Officer (Banking Operations) at<a href="https://www.icicibank.com"> ICICI Bank Ltd </a></td>
+        <tr>
+          <td>2014-2016</td>
+          <td>Assistant Manager (CBPPC) at<a href="https://www.icicibank.com"> ICICI Bank Ltd </a></td>
       </tr>
     </tbody>
   </table>
